add more local comments

--- a/press_release.en.yml
+++ b/press_release.en.yml
@@ -13,6 +13,12 @@ en:
 
     t08: "Recently, the Greek Direct Democracy Alliance set up 461 Loomio groups, one for every prefecture and region of Greece, with plans to open a nationwide conversation about how to fix democracy in the lead-up to regional elections"
 
+    t08_hungary: "Hundreds of students and academics in Hungary used Loomio to organise protests against proposed changes to education policy early last year, prompting translation of the tool into Hungarian. Within the past two weeks, Loomio users have started translating the software into Ukrainian, in response to requests from civic activists there."
+    t08_india: "Loomio is being used by the Pirate Party of India, and last year the tool was used to organise the International Non-Violent Communication Conference in Trivandrum."
+    t08_brazil: "Loomio is being used by the Pirate Parties of Brazil, Spain and India, and recently, the Greek Direct Democracy Alliance set up over 450 Loomio groups for each prefecture and region of Greece, with plans to open a nationwide conversation about how to fix democracy in the lead-up to regional elections."
+    t08_spain: "Loomio is being used by the Pirate Parties of Spain, Brazil and India, and recently, the Greek Direct Democracy Alliance set up over 450 Loomio groups for each prefecture and region of Greece, with plans to open a nationwide conversation about how to fix democracy in the lead-up to regional elections."
+
+
     t09: "\"We're delighted by the great things people are already doing with the prototype. We know its potential to empower great collaboration. But we also know its limitations. So now we need to step up and build a truly inclusive platform that's totally mobile and accessible to everyone\", said Krause"
 
     t10: "Loomio is using an open-source platform called CrowdtiltOpen to run their campaign, which allows fundraisers to build their own page and set stretch goals.  Loomio has a two-tier goal, with the first set at US$100,000 and the second at US$252,108"
